Cycles Regression: error rendering 16k environment map in Blender 3.0 #91641

Closed
opened 2021-09-23 14:01:06 +02:00 by Marcin Twarowski · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 23:29, hash: a78d3c5261
Worked: 2.93.4

Short description of error
When I try to render a scene with 16k jpeg environment map in Blender 3.0, it stops with this message:

Invalid value in cuMemcpyDtoH_v2( (char*)mem.host_pointer + offset, (CUdeviceptr)mem.device_pointer + offset, size) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:852)

obraz.png

Exact steps for others to reproduce the error

  • See attached file:
    16k_env_map_test.blend
  • It has a packed in 16k jpg env map from Hdri Haven (now Poly Haven).
  • Render this scene (or switch to rendered mode) first in 2.93.4 then in 3.0.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 23:29, hash: `a78d3c5261` Worked: 2.93.4 **Short description of error** When I try to render a scene with 16k jpeg environment map in Blender 3.0, it stops with this message: ``` Invalid value in cuMemcpyDtoH_v2( (char*)mem.host_pointer + offset, (CUdeviceptr)mem.device_pointer + offset, size) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:852) ``` ![obraz.png](https://archive.blender.org/developer/F10558874/obraz.png) **Exact steps for others to reproduce the error** - See attached file: [16k_env_map_test.blend](https://archive.blender.org/developer/F10558876/16k_env_map_test.blend) - It has a packed in 16k jpg env map from Hdri Haven (now Poly Haven). - Render this scene (or switch to rendered mode) first in 2.93.4 then in 3.0.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. Only happens with CUDA and OptiX. This issue seems to have been introduced by the Cycles-X merge.


System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 11:48, hash: 4d2ca33a8a

I can confirm. Only happens with CUDA and OptiX. This issue seems to have been introduced by the Cycles-X merge. --- **System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 Blender version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 11:48, hash: `4d2ca33a8a`
Alaska changed title from error rendering 16k environment map in Blender 3.0 to Cycles Regression: error rendering 16k environment map in Blender 3.0 2021-09-23 14:17:07 +02:00
Brecht Van Lommel self-assigned this 2021-09-23 16:22:51 +02:00

This issue was referenced by blender/cycles@1e58b36e35

This issue was referenced by blender/cycles@1e58b36e3563e53522aabd6195b0543411ee81d9

This issue was referenced by d7f803f522

This issue was referenced by d7f803f522237be41c6ede50dde38b3d6795b161

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91641
No description provided.