Fix T91641: crash rendering with 16k environment map in Cycles

Protect against integer overflow.